adding resize observer api for chart.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Planet Angular Diameter Tool</title>
   <link rel="stylesheet" href="style.css">
   <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/@juggle/resize-observer/dist/resize-observer.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
