change js and css loading to override cache

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Planet Angular Diameter Tool</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=1">
+
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
@@ -40,6 +41,7 @@
     <canvas id="angleChart" width="600" height="300"></canvas>
   </section>
 
+  <script src="main.js?v=1"></script>
   <script src="main.js?ts=<?= Date.now() ?>"></script>
 </body>
 </html>
